code cleanup: Use standard 'Charset' object instead of String literal
Slightly faster, as no lookups are needed, and no longer needs to catch UnsupportedEncodingException in some cases.